add changes to portfolio footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -230,13 +230,14 @@
     </main>
     <!--Футер-->
     <footer class="footer-section">
-      <div class="conteiner">
+      <div class="conteiner footer-container">
+        <div class="logo-adress">
         <a href="./index.html" lang="en" class="logo footer"
-          >Web<span>Studio</span></a
-        >
+          >Web<span>Studio</span>
+        </a>
         <address>
           <ul class="adress list">
-            <li>
+            <li class="adress-list-item">
               <a
                 href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17"
                 target="_blank"
@@ -246,7 +247,7 @@
               >
             </li>
 
-            <li>
+            <li class="adress-list-item">
               <a
                 href="mailto:info@devstudio.com"
                 class="adress-contact mail list"
@@ -254,12 +255,47 @@
               >
             </li>
 
-            <li>
+            <li class="adress-list-item">
               <a href="tel:+380961111111" class="adress-contact tel list"
                 >+38 096 111 11 11</a
               >
             </li>
           </ul>
+          </div>
+
+          <div>
+            <p class="footer-soc-title">Приєднуйтесь</p>
+            <ul class="footer-soc-list list">
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </address>
       </div>
     </footer>
